# bo-sandbox

./: LICENSE  README.md  main.py  pyproject.toml  run_bo.py  runner.py
_problems/: bench.py
acquisitions/: __init__.py  base.py  rand.py
experiments/config/: test.yaml
problems/: __init__.py  base.py  bench.py
test_functions/: base.py  bi_level.py  synthetic.py
utils/: __init__.py  config.py  data.py  func.py  model.py  viz.py
