[project]
name = "bo-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botorch>=0.16.1",
    "gpytorch>=1.15.1",
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "tabulate>=0.9.0",
    "torch>=2.10.0",
]
