[project]
name = "bo-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ax-platform>=1.3.1",
    "botorch>=0.18.1",
    "gpytorch>=1.15.2",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "torch>=2.12.0",
]
